fix toggler align

--- a/community/ui/header/header/header.module.scss
+++ b/community/ui/header/header/header.module.scss
@@ -1,22 +1,5 @@
 @import '~@teambit/base-ui.layout.breakpoints/_breakpoints.scss';
 
-.inspect {
-  display: flex;
-  align-items: center;
-  padding-left: 24px;
-  > span {
-    margin-right: 4px;
-  }
-  @media screen and (max-width: $br-md) {
-    font-size: 12px;
-    padding-left: 8px;
-  }
-  @media screen and (max-width: $br-sm) {
-    display: none;
-  }
-}
-
-
 .githubLink {
   @media screen and (max-width: $br-md) {
     > span:not(:first-child) {
